# ECW-2023

babel/: extr_col.py  extr_tokens.py  message.xcf  shell.nix
bmpaas/: BMPaaS.py  resolv.py  shell.nix
cryptoflow/: challenge  challenge.i64  expl.py  flag
dumpcyber/files/extracted_files/: deesktop.ini  dessktop.ini  file.txt.enc
flyaway/: binary  extr.py  morse  test  test.key  test_natural  test_opposite_natural  test_reverse
interactive/: dbg_input.txt  decode.py  disassembled  notes  sample.py
interactive/original_files/: sample.py
interactive/progs/: prog.bin.2
jigsaw/: expl.py
moth/: moth  res  secret.py
random_key/: Makefile  challenge.py  generate_key  generate_key.c  test.c
shellboy/: CMakeLists.txt  shellboy.gb
shellboy/src/: inst.c  inst.h  inst_list.c  inst_list.h  inst_list_renderer.c  inst_list_renderer.h  main.c  simu.c  simu.h  simu_renderer.c  simu_renderer.h
shellboy/src/res/maps/: map.c  map.h
shellboy/src/res/sprites/: bot.c  bot.h  selector.c  selector.h
shellboy/src/res/tilesets/: font.c  font.h  tiles.c  tiles.h
shellboy/src/utils/: inputs.c  inputs.h  io.c  io.h  math.h
spaceships/: .swp  check_evol.py  extract_evol.py  r0_state  r1_state  resolv  resolv.c  shell.nix  spaceship.txt  spaceships
underconstruction/: app.py  expl.py  shell.nix
watermelons/: method  test  test.c  watermelon.txt  watermelons  watermelons.c
